# bjsc

./: .gitignore  Cargo.toml  NOTES.md  README.md
.github/workflows/: ci.yml  deploy.yml
bjsc-tui/: Cargo.toml  build.rs
bjsc-tui/src/: api.rs  auth.rs  main.rs  split_bar_chart.rs
bjsc-tui/src/draw/: coach.rs  confirm_quit.rs  histogram.rs  mod.rs  play.rs  progress.rs  screen_picker.rs  strategy.rs
bjsc-web/: .gitignore  Cargo.toml  Trunk.toml  index.html  package.json  pnpm-lock.yaml
bjsc-web/src/: api.rs  auth.rs  main.rs
bjsc-web/styles/: input.css
spaced-rep/: Cargo.toml
spaced-rep/src/: lib.rs
src/: api.rs  bjerror.rs  card.rs  game_message.rs  gamestate.rs  hand.rs  hand_builder.rs  lib.rs  main.rs  persistence.rs  progress.rs  shoe.rs  studymode.rs  supabase.rs  table_index_keys.rs
src/gamestate/: mod.rs  stats.rs
src/leitner/: mod.rs
src/strat/: actions.rs  mod.rs  phrases.rs  tableindex.rs
src/strat/charts/: hard_chart.rs  mod.rs  soft_chart.rs  split_chart.rs  surrender_chart.rs
src/strat/tableindex/: colindex.rs  mod.rs  rowindex.rs  table_type.rs
supabase/functions/coaching/: index.ts
supabase/migrations/: 20250405000000_create_tables.sql
