[workspace]
members = ["bjsc-tui", "bjsc-web", "spaced-rep"]
resolver = "2"

[package]
name = "bjsc"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
itertools = "0.14.0"
spaced-rep = { path = "spaced-rep" }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
thiserror = "2.0.11"
