[package]
name = "bjsc-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
bjsc = { path = ".." }
spaced-rep = { path = "../spaced-rep" }
crossterm = "0.28"
open = "5"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
