[package]
name = "bjsc-web"
version = "0.1.0"
edition = "2021"

[dependencies]
bjsc = { path = ".." }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["KeyboardEvent", "Document", "EventTarget", "Window"] }
