[package]
name = "bjsc-web"
version = "0.1.0"
edition = "2021"

[dependencies]
bjsc = { path = ".." }
spaced-rep = { path = "../spaced-rep", features = ["wasm"] }
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["KeyboardEvent", "Document", "Element", "EventTarget", "Window"] }
