[package]
name = "spaced-rep"
version = "0.1.0"
edition = "2021"
description = "A generic spaced repetition engine using Leitner boxes"

[features]
wasm = ["js-sys"]

[dependencies]
js-sys = { version = "0.3", optional = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
